proxy pretty-name to minio
