# docs/swagger.yaml
@@ -37,7 +37,7 @@ paths:
         name: category
         required: true
         type: string
-      - description: имя файла
+      - description: имя файла в файловом хранилище
         in: path
         name: filename
         type: string
@@ -45,6 +45,10 @@ paths:
         in: query
         name: pending
         type: boolean
+      - description: '''красивое'' имя файла'
+        in: query
+        name: prettyName
+        type: string
       - description: содержимое файла
         in: body
         name: body
