# entity/file.go
@@ -2,8 +2,14 @@ package entity
 
 import "io"
 
+const (
+	FilePrettyNameMetadataField      = "PrettyName"
+	FileMinioMetadataPrettyNameField = "X-Amz-Meta-PrettyName"
+)
+
 type Metadata struct {
 	Filename    string
+	PrettyName  string
 	Category    string
 	ContentType string
 	Size        int64
@@ -11,6 +17,7 @@ type Metadata struct {
 
 type UploadFileRequest struct {
 	Filename      string
+	PrettyName    string
 	Category      string
 	Pending       bool
 	ContentReader io.Reader
